# LLaMa-MCP-Streamlit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_script.py
.devcontainer/: devcontainer.json
.github/workflows/: streamlit_gh_actions.yml
app/: ui.py
llama_mcp_streamlit/: config.py  main.py
llama_mcp_streamlit/ui/: chat_ui.py  sidebar.py
llama_mcp_streamlit/utils/: agent.py  mcp_client.py  mcp_server.py
